# taskwarrior

./: .gitignore  CMakeLists.txt  NOTES.txt
doc/devel/contrib/: releasing.md
src/: CMakeLists.txt  Operation.cpp  Operation.h
src/tc/: CMakeLists.txt  Replica.cpp  Replica.h  Task.cpp  Task.h  util.cpp  util.h
taskchampion/integration-tests/src/bindings_tests/: replica.c  string.c  task.c
taskchampion/lib/: Cargo.toml  taskchampion.h
taskchampion/lib/src/: annotation.rs  kv.rs  lib.rs  replica.rs  server.rs  status.rs  string.rs  task.rs  traits.rs  uda.rs  util.rs  uuid.rs  workingset.rs
taskchampion/taskchampion/src/server/cloud/: server.rs
taskchampion/taskchampion/src/server/sync/: mod.rs
taskchampion/taskchampion/src/task/: task.rs
test/: .gitignore  CMakeLists.txt  operation.t.cpp  tc.t.cpp
