[package]
name = "taskchampion-lib"
version = "0.1.0"
edition = "2018"

[dependencies]
libc = "0.2.136"
taskchampion = { path = "../taskchampion" }
anyhow = "1.0"
ffizz-header = { version = "0.3", path = "/home/dustin/p/ffizz/header" }
ffizz-string = { version = "0.3", path = "/home/dustin/p/ffizz/string" }
ffizz-passby = { version = "0.3", path = "/home/dustin/p/ffizz/passby" }

[dev-dependencies]
pretty_assertions = "1"
