[package]
name = "taskchampion-lib"
version = "0.1.0"
edition = "2018"

[dependencies]
libc = "0.2.136"
taskchampion = { path = "../taskchampion" }
anyhow = "1.0"
ffizz-header = { version = "0.4" }
ffizz-string = { version = "0.4" }
ffizz-passby = { version = "0.4" }

[dev-dependencies]
pretty_assertions = "1"
